# NeuraLara8

./: README.md
docker_scripts/: docker_build_image.sh  docker_run_container.sh
ros2_docker_scripts/: Dockerfile
ros2_lara8_ws/src/dependancies/: foonathan_memory_vendor_deb-1.3.1-Linux.deb  neura_cpp_api-1.0-Linux.deb  nrti_msgs-0.1.1-Linux.deb
ros2_lara8_ws/src/dual_moveit/: CMakeLists.txt  package.xml
ros2_lara8_ws/src/dual_moveit/src/: dual_moveit.cpp
ros2_lara8_ws/src/moveit_lara8_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_lara8_ws/src/moveit_lara8_moveit_config/config/: dual_lara8.srdf  joint_limits.yaml  kinematics.yaml  lara8.srdf  lara8.urdf.xacro  lara8_gaz.urdf.xacro  lara8_macro.xacro  lara8_ros2_control.xacro  left_initial_positions.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
ros2_lara8_ws/src/moveit_lara8_moveit_config/gazebo/models/: model.config  model.sdf
ros2_lara8_ws/src/moveit_lara8_moveit_config/gazebo/worlds/: aruco_world.sdf  myworld.sdf
ros2_lara8_ws/src/moveit_lara8_moveit_config/launch/: demo.launch.py  dual_demo.launch.py  gazebo.launch.py  lara8_bringup.launch.py  lara8_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_lara8_ws/src/neura_robot_description/: CMakeLists.txt  package.xml
ros2_lara8_ws/src/robot_description/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  config.rviz  package.xml
(+5 files in other folders)
